2006-11-20  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-version-string): Call this Version 5.2 stable
	pre-release, since it diverges slightly from our 5.2 branch, in
	that unstable features are not included.

2006-11-12  Michael Olson  <mwolson@gnu.org>

	* erc-log.el: Save all log buffers when Emacs exits, in case
	someone ignores the warning about open processes.  Remove the
	advice code in the commentary.
	(erc-save-query-buffers): Docfix.
	(erc-log-save-all-buffers): New function that saves all ERC
	buffers to logs.
	(erc-current-logfile): Fix bug in filename selection, where the
	current buffer was erroneously being preferred over the given
	buffer.

2006-11-08  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-string-to-port): Avoid error when a numerical port
	is passed.  Thanks to Zekeriya KOÇ for the report.

2006-11-08  "Łukasz Demianiuk"  <ldemianiuk@gmail.com> (tiny change)

	* erc.el (erc-header-line): Fix typo.

2006-11-06  Juanma Barranquero  <lekktu@gmail.com>

	* erc-dcc.el (erc-dcc-send-file): Fix typo in error message.

	* erc.el (read-passwd):
	* erc-autoaway.el (erc-autoaway-reestablish-idletimer):
	* erc-truncate.el (truncate): Fix typo in docstring.

2006-10-21  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-iswitchb): Fix bug when hitting C-c C-b without
	first loading iswitchb.  Thanks to Leo for the report.

2006-10-10  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-default-port): Make the default be 6667 instead of
	ircd. since Mac OS X apparently has problems with looking up that
	port name.

	* erc-backend.el (353): Receive names after displaying the initial
	message, instead of before.

2006-10-05  Diane Murray  <disumu@x3y2z1.net>

	* erc.el (erc-my-nick-face): New face.
	(erc): Use FULL-NAME argument, not `erc-user-full-name'.  This
	fixes a bug where the :full-name argument passed to the function
	was not respected.
	(erc-format-my-nick): Use `erc-my-nick-face'.  This should help